# blazerpc

./: .gitignore  404.html  CHANGELOG.md  CONTRIBUTING.md  LICENSE  README.md  index.html  mkdocs.yml  pyproject.toml  sitemap.xml
.github/: pull_request_template.md
.github/ISSUE_TEMPLATE/: bug_report.yml  config.yml  feature_request.yml  question.yml
.github/workflows/: ci.yml  docs.yml  publish.yml
api-reference/: index.html
architecture/: index.html
configuration/: index.html
contributing/: index.html
docs/: api-reference.md  architecture.md  configuration.md  contributing.md  getting-started.md  index.md
docs/guides/: batching.md  dependency-injection.md  integrations.md  middleware.md  streaming.md
examples/batching/: app.py
examples/dependency_injection/: app.py  client.py
examples/multi_model/: app.py
examples/simple/: app.py  client.py
examples/streaming/: app.py  client.py
getting-started/: index.html
guides/batching/: index.html
guides/integrations/: index.html
guides/middleware/: index.html
guides/streaming/: index.html
search/: search_index.json
src/blazerpc/: __init__.py  app.py  client.py  context.py  decorators.py  exceptions.py  types.py
src/blazerpc/cli/: main.py  proto.py  reload.py  serve.py
tests/: conftest.py  test_app.py  test_batcher.py  test_cli.py  test_client.py  test_codegen.py  test_context.py  test_contrib.py  test_executor.py  test_health.py  test_middleware.py  test_reload.py  test_serialization.py  test_server.py  test_types.py
tests/integration/: test_client_e2e.py  test_e2e.py
(+14 files in other folders)
