[project]
name = "blazerpc"
version = "1.0.0"
description = "A lightweight, framework-agnostic gRPC library for machine learning inference"
readme = "README.md"
license = "MIT"
authors = [
    { name = "Ifihanagbara Olusheye", email = "victoriaolusheye@gmail.com" }
]
requires-python = ">=3.10"
dependencies = [
    "grpclib>=0.4.7",
    "protobuf>=4.21.0",
    "betterproto>=2.0.0b6",
    "numpy>=1.24.0",
    "typer>=0.9.0",
    "uvloop>=0.19.0; sys_platform != 'win32'",
    "prometheus-client>=0.19.0",
    "opentelemetry-api>=1.22.0",
]

[project.optional-dependencies]
pytorch = ["torch>=2.0.0"]
tensorflow = ["tensorflow>=2.14.0"]
onnx = ["onnxruntime>=1.16.0"]
all = ["blazerpc[pytorch,tensorflow,onnx]"]
dev = [
    "pytest>=7.4.0",
    "pytest-asyncio>=0.21.0",
    "pytest-cov>=4.1.0",
    "ruff>=0.1.0",
    "mypy>=1.7.0",
]
docs = [
    "mkdocs>=1.5.0",
    "mkdocs-material>=9.5.0",
    "pymdown-extensions>=10.0",
]

[project.scripts]
blaze = "blazerpc.cli.main:app"

[build-system]
requires = ["uv_build>=0.8.13,<0.9.0"]
build-backend = "uv_build"

[tool.pytest.ini_options]
testpaths = ["tests"]
asyncio_mode = "auto"

[tool.ruff]
target-version = "py310"
line-length = 88

[tool.mypy]
python_version = "3.10"
strict = true
